# swarm-predict

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ai_software_employment.md  escribano_indra.md  sanchez_legislatura.md
examples/results/escribano_sample/: graph.json
examples/results/sim_20260326_205034_5319ac/: actions.jsonl  agents.json  report.md  state.json
examples/results/sim_20260326_215859_5aa69d/: actions.jsonl  agents.json  graph.json  report.md  state.json
examples/results/sim_20260326_220559_bb2faf/: actions.jsonl  agents.json  graph.json  report.md  state.json
src/swarm_predict/: __init__.py  agent_generator.py  cli.py  config.py  enricher.py  graph_builder.py  interviewer.py  models.py  reporter.py  simulator.py
src/swarm_predict/llm/: base.py  gemini_llm.py  openai_llm.py  utils.py
