[project]
name = "swarm-predict"
version = "0.1.0"
description = "A local-first multi-agent prediction engine. Predict anything with swarm intelligence."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "networkx>=3.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
swarm-predict = "swarm_predict.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm_predict"]
